--- a/index.html
+++ b/index.html
@@ -12,8 +12,40 @@
 <body>
 
     <div class="grid">
-        <div class="main"></div>
-        <div class="skills"></div>
+        <div class="name"></div>
+        <div class="main">
+            <img src="5.svg" class="head">
+            <img src="5.svg" class="left">
+            <img src="5.svg" class="right">
+            <img src="5.svg" class="left">
+            <img src="5.svg" class="right">
+        </div>
+        <div class="hp">
+          ok <img src="5.svg"> | hurting <img src="3.svg"> | out <img src="2.svg"> | dead
+        </div>
+        <div class="skills">
+            <ul>
+                <li>body</li>
+                <li>wits</li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
         <div class="items"></div>
         <div class="devel">
             <div class="chart">
@@ -138,15 +170,34 @@
                 <i></i>
                 <i></i>
                 <div class="legend">
-                  <span class="special">Specialty</span><span class="other">Other</span>
+                    <span class="special">specialty</span><span class="other">other</span>
 
                 </div>
             </div>
         </div>
-        <div class="spell1"></div>
-        <div class="spell2"></div>
-        <div class="spell3"></div>
-        <div class="spell4"></div>
+        <div class="c"></div>
+        <div class="addons">
+          
+        </div>
+        <!-- <div class="spell spell1">
+          <ul>
+            <li>1 3 in 2</li>
+            <li>time <img src="5.svg"></li>
+            <li>distance <img src="5.svg"></li>
+            <li>area <img src="5.svg"></li>
+            <li>damage <img src="5.svg"></li>
+            <li>buff <img src="5.svg"></li>
+            <li>illusion <img src="5.svg"></li>
+            <li>creation <img src="5.svg"></li>
+            <li>morphing <img src="5.svg"></li>
+            <li>destruction <img src="5.svg"></li>
+          </ul>
+        </div>
+        <div class="spell spell2"></div>
+        <div class="spell spell3"></div>
+        <div class="spell spell4"></div>
+        <div class="spell spell5"></div>
+        <div class="spell spell6"></div> -->
     </div>
 </body>
 
