--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
         <div class="name"></div>
         <div class="main">
             <img src="5.svg" class="head">
+            <img src="5.svg" class="chest">
             <img src="5.svg" class="left">
             <img src="5.svg" class="right">
-            <img src="5.svg" class="left">
-            <img src="5.svg" class="right">
+            <img src="5.svg" class="left2">
+            <img src="5.svg" class="right2">
         </div>
         <div class="hp">
-          ok <img src="5.svg"> | hurting <img src="3.svg"> | out <img src="2.svg"> | dead
+            ok
+            <img src="5.svg"> | hurting
+            <img src="3.svg"> | out
+            <img src="2.svg"> |
+            <b>☠</b>
         </div>
         <div class="skills">
             <ul>
                 <li>body</li>
                 <li>wits</li>
-                <li></li>
+                <li>attack</li>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -46,10 +51,19 @@
                 <li></li>
             </ul>
         </div>
-        <div class="items"></div>
+        <div class="items">
+
+
+        </div>
+        <div class="luggage">
+
+
+        </div>
         <div class="devel">
             <div class="chart">
-                <i><div>4</div></i>
+                <i>
+                    <div>4</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -68,7 +82,9 @@
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>3</div></i>
+                <i>
+                    <div>3</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -85,7 +101,9 @@
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>3</div></i>
+                <i>
+                    <div>3</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -101,7 +119,9 @@
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>2</div></i>
+                <i>
+                    <div>2</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -121,7 +141,9 @@
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>2</div></i>
+                <i>
+                    <div>2</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -135,17 +157,25 @@
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>1</div></i>
+                <i>
+                    <div>1</div>
+                </i>
                 <i></i>
                 <i></i>
-                <i><div>3</div></i>
+                <i>
+                    <div>3</div>
+                </i>
                 <i></i>
                 <i></i>
-                <i><div>2</div></i>
+                <i>
+                    <div>2</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>1</div></i>
+                <i>
+                    <div>1</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -155,7 +185,9 @@
                 <i></i>
                 <i></i>
                 <i></i>
-                <i><div>1</div></i>
+                <i>
+                    <div>1</div>
+                </i>
                 <i></i>
                 <i></i>
                 <i></i>
@@ -170,14 +202,26 @@
                 <i></i>
                 <i></i>
                 <div class="legend">
-                    <span class="special">specialty</span><span class="other">other</span>
+                    <span class="special">specialty</span>
+                    <span class="other">other</span>
 
                 </div>
             </div>
         </div>
         <div class="c"></div>
         <div class="addons">
-          
+            <ul>
+                <li><b>skill test</b> SKILL x K6; count K6>DIFFICULTY </li>
+                <li>1. barely and slow 2. done 3. good 4. good and quick 5. epic</li>
+                <li><b>attacking</b> A:ATTACK x K6; any K6>D:WITS success; damage = count K6>D:ARMOR</li>
+                <li><b>attack trait</b> avg(BODY,weapon) avg(WITS,projectile)</li>
+                <li>
+                    <b>health</b> resting | first aid + resting | treatment
+                </li>
+                <li>
+                    <b>feats/magic</b> Decrease HP by the level of used special. Use skill test mechanic with DIFFICULTY=LEVEL
+                </li>
+            </ul>
         </div>
         <!-- <div class="spell spell1">
           <ul>
@@ -198,6 +242,242 @@
         <div class="spell spell4"></div>
         <div class="spell spell5"></div>
         <div class="spell spell6"></div> -->
+    </div>
+
+
+    <div class="cards">
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul>
+                <li>level [ ]</li>
+                <li>time
+                    <img src="5.svg">
+                </li>
+                <li>cast
+                    <img src="5.svg">
+                </li>
+                <li>distance
+                    <img src="5.svg">
+                </li>
+                <li>area
+                    <img src="5.svg">
+                </li>
+                <li>damage
+                    <img src="5.svg">
+                </li>
+                <li>buff
+                    <img src="5.svg">
+                </li>
+                <li>illusion
+                    <img src="5.svg">
+                </li>
+                <li>c/m/d
+                    <img src="5.svg">
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 
