--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="5.svg"> | hurting
             <img src="3.svg"> | out
             <img src="2.svg"> |
-            <b>☠</b>
+            ☠
         </div>
         <div class="skills">
             <ul>
@@ -56,7 +56,7 @@
 
         </div>
         <div class="luggage">
-
+            wealth <img src="3.svg">
 
         </div>
         <div class="devel">
@@ -223,25 +223,6 @@
                 </li>
             </ul>
         </div>
-        <!-- <div class="spell spell1">
-          <ul>
-            <li>1 3 in 2</li>
-            <li>time <img src="5.svg"></li>
-            <li>distance <img src="5.svg"></li>
-            <li>area <img src="5.svg"></li>
-            <li>damage <img src="5.svg"></li>
-            <li>buff <img src="5.svg"></li>
-            <li>illusion <img src="5.svg"></li>
-            <li>creation <img src="5.svg"></li>
-            <li>morphing <img src="5.svg"></li>
-            <li>destruction <img src="5.svg"></li>
-          </ul>
-        </div>
-        <div class="spell spell2"></div>
-        <div class="spell spell3"></div>
-        <div class="spell spell4"></div>
-        <div class="spell spell5"></div>
-        <div class="spell spell6"></div> -->
     </div>
 
 
